<resources>
    <string name="app_name">吉医在线</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="checkcode">验证码</string>
    <string name="login">登录窗口</string>
    <string name="go">登录</string>
    <string name="daily_courses">课表</string>
    <string name="whole_courses">完整课表</string>
    <string name="achievement_inquire">成绩查询</string>
    <string name="synthesis_inquire">至今未通过科目</string>
    <string name="re_entry">重新登录</string>
    <string name="set_week">设置当前周数</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="xn">学年 :</string>
    <string name="xq">学期 :</string>
    <string name="Yes">确认</string>
    <string name="Class">科目</string>
    <string name="Max_grade">历史最高成绩</string>
    <string name="title_activity_get_score">课程表</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_news">资讯</string>
    <string name="title_activity_get_course">历年成绩</string>
    <string name="query">查询</string>
    <string name="days">时间</string>
    <string name="menu_first">资讯</string>
    <string name="menu_second">课表</string>
    <string name="menu_third">成绩</string>
</resources>